[gd_scene load_steps=2 format=3 uid="uid://dwdiv1qyk8twh"]

[ext_resource type="Script" uid="uid://b82s7kwpiy5h1" path="res://scripts/ui/multiplayer_menu/multiplayer_menu.gd" id="1_sbfnf"]

[node name="MultiplayerMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_sbfnf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HostButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Join"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"
